<resources>
    <string name="app_name">AxFactor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_nueva_formula">Nueva Formula</string>
    <string name="menu_formulas">Formulas</string>
    <string name="menu_inventario">Anexo Inventario</string>
    <string name="login">Login</string>
    <string name="fg_login_contrasena">Contraseña</string>
    <string name="fg_login_usuario">Usuario</string>
    <string name="fg_login_entrar">Entrar</string>
    <string name="fg_newformula_seleccionar_color">Seleccionar color: </string>
    <string name="fg_newformula_codigo">Codigo</string>
    <string name="fg_newformula_linea">Linea</string>
    <string name="fg_newformula_aceptar">Aceptar</string>
    <string name="fg_newformula_title">Nueva formula</string>
    <string name="action_nuevo_inventario">Nuevo inventario</string>
    <string name="action_salir">Salir</string>
    <string name="txt_Gramos">Gramos</string>
    <string name="txt_Tara">Tara</string>
    <string name="txt_agregar">Agregar</string>
    <string name="txt_Finalizar">Finalizar</string>
    <string name="txt_detalle_formula">Detalle formula</string>
    <string name="action_new_material">Nuevo material</string>
    <string name="action_convertir">Convertir</string>
    <string name="txt_Convertir">Convertir</string>
    <string name="txt_nuevos_gramos">Nuevo total</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_nuevo_material">Nuevo material</string>
    <string name="txt_Codigo">Codigo</string>
    <string name="txt_eliminar_material">Eliminar material</string>
    <string name="txt_seguro_eliminar">¿Estas seguro que deseas eliminar esta material?</string>
    <string name="txt_editar_material">Editar material</string>
    <string name="txt_nuevo_anexo_inventario">Nuevo Anexo Inventario</string>
    <string name="txt_buscar_codigo">Code Reference or Code Description</string>
    <string name="menu_salir">Salir</string>
    <string name="txt_total">Total:</string>
    <string name="txt_formula_convertir">Conversión de formula</string>
    <string name="txt_armadora">Armadora</string>
    <string name="menu_laboratorios">Laboratorios</string>
    <string name="action_compartir_formula">Compartir formula</string>
    <string name="prefs_file">PREFERENCE_FILE_KEY</string>
    <string name="menu_new_formula">New Formula</string>
</resources>