<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_formulas"
            android:icon="@drawable/ic_baseline_colorize_24"
            android:title="@string/menu_formulas" />
        <item
            android:id="@+id/nav_inventario"
            android:icon="@drawable/ic_baseline_inventory_24"
            android:title="@string/menu_inventario" />

        <item
            android:id="@+id/nav_laboratorios"
            android:icon="@drawable/ic_baseline_corporate_fare_24"
            android:title="@string/menu_laboratorios"/>
    </group>
    <group
        android:id="@+id/groupOther"
        android:checkableBehavior="single">
            <item
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/menu_salir" />
    </group>

</menu>